# keycloak-wasm-auth

./: .gitattributes  .gitignore  Cargo.toml  README.md  cargo.toml
samples/docker/demo_hnl/: docker-compose.yaml
samples/http/: authentication.http
samples/keycloak-csr-leptos/: Cargo.toml  README.md  Trunk.toml  index.html
samples/keycloak-csr-leptos/src/: auth_config.rs  keycloak_access_admin.rs  login_button.rs  main.rs
samples/keycloak-react/: package-lock.json  package.json
samples/keycloak-react/app/: layout.tsx  page.tsx
samples/keycloak-react/app/callback/: page.tsx
samples/keycloak-react/app/hooks/: useKeycloakWasm.ts
samples/keycloak-react/components/: LoginButton.tsx  UserProfile.tsx
samples/keycloak-react/public/: initWasm.js
samples/keycloak-react/public/wasm/: keycloak_wasm_wrapper.js  keycloak_wasm_wrapper.wasm  package.json
samples/wasm-wrapper/: Cargo.toml  README.md
samples/wasm-wrapper/src/: lib.rs
src/: auth.rs  lib.rs  storage.rs  validation.rs
src/types/: mod.rs  params.rs
