[package]
name = "keycloak-csr-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
wasm-bindgen-test = "0.3.50"
wasm-tracing = "2.1.0"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"